[tool.poetry]
name = "binary-prediction"
version = "0.1.0"
description = ""
authors = ["susanaes <susanaes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
jupyter = "^1.0.0"
pandas = "^2.1.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
